# spicebridge

./: .gitignore  .mcp.json  CONNECTOR_SUBMISSION_GUIDE.md  README.md  pyproject.toml  setup_wizard_diff.txt  setup_wizard_final_diff.txt  setup_wizard_review2_diff.txt  start_cloud.sh
.claude/commands/: commit.md
docs/: cloud-setup.md
prompts/: cloud_system_prompt.md  local_system_prompt.md
scripts/: start_cloud.sh
security-audit/: AUDIT_REPORT.md  FINAL_SUMMARY.md  SCAN_SUMMARY.md
security-audit/reports/: bandit-final.json  bandit-final.txt  bandit-final2.json  bandit-final2.txt  bandit-tests-final.txt  bandit-tests-final2.txt  bandit-tests.txt  bandit.json  bandit.txt  detect-secrets-final.json  detect-secrets-final2.json  detect-secrets.json  pip-audit-final.json  pip-audit-final2.json  pip-audit.json  pip-audit.txt  radon-complexity-final.txt  radon-complexity-final2.txt  radon-complexity.txt  radon-maintainability-final.txt  radon-maintainability.txt  safety-final.json  safety-final2.json  safety.json  safety.txt  semgrep-final.json  semgrep-final.txt  semgrep-final2.json  semgrep.json  semgrep.txt  vulture-final.txt  vulture-final2.txt  vulture.txt
src/spicebridge/: __init__.py  __main__.py  auth.py  circuit_manager.py  composer.py  kicad_export.py  metrics.py  model_generator.py  model_store.py  monte_carlo.py  netlist.py  parser.py  prompt_translator.py  sanitize.py  schematic.py  schematic_cache.py  server.py  setup_wizard.py  simulator.py  solver.py  standard_values.py  svg_renderer.py  template_manager.py  web_viewer.py
src/spicebridge/static/: viewer.html
src/spicebridge/templates/: differential_amp.json  instrumentation_amp.json  inverting_opamp.json  mfb_bandpass.json  rc_highpass_1st.json  rc_lowpass_1st.json  sallen_key_hpf_2nd.json  sallen_key_lowpass_2nd.json  summing_amplifier.json  twin_t_notch.json  voltage_divider.json
tests/: test_auth.py  test_auto_design.py  test_circuit_manager.py  test_cli.py  test_health.py  test_kicad_export.py  test_metrics.py  test_model_generator.py  test_model_store.py  test_sanitize.py  test_schematic.py  test_security.py  test_server.py  test_setup_wizard.py  test_solver.py  test_svg_renderer.py  test_template_manager.py  test_template_server.py  test_web_viewer.py
