[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spicebridge"
version = "0.1.0"
description = "AI-powered circuit design through simulation"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "spicelib>=1.4.0",
    "numpy",
    "mcp[cli]>=1.25,<2",
    "schemdraw",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
