[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spicebridge"
version = "0.1.0"
description = "AI-powered circuit design through simulation"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "spicelib>=1.4.0",
    "numpy",
    "mcp[cli]>=1.25,<2",
    "schemdraw",
    "matplotlib",
]

[project.scripts]
spicebridge = "spicebridge.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spicebridge = ["templates/*.json"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/spicebridge/kicad_export.py" = ["E501"]
