[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spicebridge"
version = "0.1.0"
description = "AI-powered circuit design through simulation"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "spicelib>=1.4.0,<2",
    "numpy>=1.24,<3",
    "mcp[cli]>=1.25,<2",
    "schemdraw>=0.19,<1",
    "aiohttp>=3.10.11,<4",
]

[project.scripts]
spicebridge = "spicebridge.__main__:main"
spicebridge-viewer = "spicebridge.web_viewer:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spicebridge = ["templates/*.json", "static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/spicebridge/kicad_export.py" = ["E501"]
"src/spicebridge/svg_renderer.py" = ["E501"]
"src/spicebridge/web_viewer.py" = ["E501"]
